# geometry2-release

./: 0001-Add-multiarch-dirs-to-dh_shlibdeps.patch  0001-Support-GNU-installdirs.patch  0001-Support-GNU-multiarch-install-dirs.patch  CHANGELOG.rst  CMakeLists.txt  README.md  crystal.ignored  dashing.ignored  debian.store  eloquent.ignored  mainpage.dox  package.xml  patches.conf  r2b2.ignored  releaser_history.json  rosdoc2.yaml  rpm.store  setup.py  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
doc/: conf.py  cpp_api_docs.rst  mainpage.md
examples_tf2_py/: CHANGELOG.rst  package.xml  setup.py
examples_tf2_py/examples_tf2_py/: async_waits_for_transform.py
geometry2/: CHANGELOG.rst  CMakeLists.txt  package.xml
include/tf2/: buffer_core.hpp  buffer_core_interface.h  convert.h  exceptions.hpp  time.h  time_cache.hpp  transform_datatypes.hpp  transform_storage.h  transform_storage.hpp  utils.h
include/tf2_eigen/: tf2_eigen.hpp
include/tf2_geometry_msgs/: tf2_geometry_msgs.hpp
include/tf2_kdl/: tf2_kdl.hpp
include/tf2_ros/: async_buffer_interface.hpp  buffer.hpp  buffer_client.h  buffer_interface.hpp  message_filter.hpp  static_transform_broadcaster.hpp  static_transform_broadcaster_node.hpp  transform_broadcaster.h  (+3 more)
rpm/: ros-galactic-examples-tf2-py.spec  ros-galactic-geometry2.spec  ros-galactic-tf2-bullet.spec  ros-galactic-tf2-eigen-kdl.spec  ros-galactic-tf2-eigen.spec  ros-galactic-tf2-geometry-msgs.spec  ros-galactic-tf2-kdl.spec  ros-galactic-tf2-msgs.spec  ros-galactic-tf2-py.spec  ros-galactic-tf2-ros-py.spec  ros-galactic-tf2-ros.spec  ros-galactic-tf2-sensor-msgs.spec  ros-galactic-tf2-tools.spec  ros-galactic-tf2.spec  ros-humble-examples-tf2-py.spec  ros-humble-geometry2.spec  ros-humble-tf2-bullet.spec  ros-humble-tf2-eigen-kdl.spec  ros-humble-tf2-eigen.spec  ros-humble-tf2-geometry-msgs.spec  ros-humble-tf2-kdl.spec  ros-humble-tf2-msgs.spec  ros-humble-tf2-py.spec  ros-humble-tf2-ros-py.spec  ros-humble-tf2-ros.spec  ros-humble-tf2-sensor-msgs.spec  ros-humble-tf2-tools.spec  ros-humble-tf2.spec  ros-iron-examples-tf2-py.spec  ros-iron-geometry2.spec  ros-iron-tf2-bullet.spec  ros-iron-tf2-eigen-kdl.spec  ros-iron-tf2-eigen.spec  ros-iron-tf2-geometry-msgs.spec  ros-iron-tf2-kdl.spec  ros-iron-tf2-msgs.spec  ros-iron-tf2-py.spec  ros-iron-tf2-ros-py.spec  ros-iron-tf2-ros.spec  ros-iron-tf2-sensor-msgs.spec  (+53 more)
src/: buffer_core.cpp  static_cache.cpp  tf2_echo.cpp  tf2_eigen_kdl.cpp  tf2_monitor.cpp  time.cpp
test/: cache_benchmark.cpp  cache_unittest.cpp  message_filter_test.cpp  simple_tf2_core.cpp  static_cache_test.cpp  test_buffer.cpp  test_buffer_server.cpp  test_listener_and_broadcaster.py  test_storage.cpp  test_tf2_bullet.cpp  test_tf2_geometry_msgs.cpp  test_tf2_kdl.cpp  test_time.cpp  tf2_eigen-test.cpp  velocity_test.cpp
test_tf2/: CHANGELOG.rst  CMakeLists.txt  package.xml
tf2/: CHANGELOG.rst  CMakeLists.txt  Doxyfile  package.xml  rosdoc2.yaml
tf2_bullet/: CHANGELOG.rst  CMakeLists.txt  bullet-extras.cmake  package.xml
tf2_eigen/: CHANGELOG.rst  CMakeLists.txt  package.xml  rosdoc2.yaml
tf2_eigen_kdl/: CHANGELOG.rst  CMakeLists.txt  package.xml
tf2_geometry_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
tf2_kdl/: CHANGELOG.rst  CMakeLists.txt  package.xml  rosdoc2.yaml
tf2_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml  tfmessage_bridge_mapping_rule.yaml
tf2_py/: CHANGELOG.rst  CMakeLists.txt  package.xml
tf2_ros/: CHANGELOG.rst  CMakeLists.txt  buffer_client.py  package.xml  static_transform_listener.py  transform_listener.py
tf2_ros_py/: CHANGELOG.rst  package.xml  setup.py
tf2_sensor_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
tf2_tools/: CHANGELOG.rst  package.xml  setup.py
(+136 files in other folders)
