<?xml version="1.0"?>
<package format="2">
  <name>tf2_eigen_kdl</name>
  <version>0.45.4</version>
  <description>

     Conversion functions between:
      - Eigen and KDL

  </description>

  <maintainer email="alejandro@openrobotics.org">Alejandro Hernandez Cordero</maintainer>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>BSD</license>

  <author>Adam Leeper</author>
  <author>Stuart Glaser</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>liborocos-kdl-dev</build_depend>

  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>liborocos-kdl-dev</build_export_depend>

  <exec_depend>liborocos-kdl</exec_depend>

  <depend>tf2</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rosdoc2>rosdoc2.yaml</rosdoc2>
  </export>
</package>
