<package format="2">
  <name>tf2_kdl</name>
  <version>0.45.6</version>
  <description>
    KDL binding for tf2
  </description>

  <maintainer email="alejandro@openrobotics.org">Alejandro Hernandez Cordero</maintainer>
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/wiki/tf2</url>

  <author email="tfoote@osrfoundation.org">Tully Foote</author>
  <author>Wim Meeussen</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <build_depend>eigen</build_depend>
  <build_depend>liborocos-kdl-dev</build_depend>

  <exec_depend>liborocos-kdl</exec_depend>
  <exec_depend>python3-pykdl</exec_depend>
  <exec_depend>tf2_ros_py</exec_depend>

  <build_export_depend>liborocos-kdl-dev</build_export_depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>rclcpp</test_depend>

  <doc_depend>PyKDL</doc_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rosdoc2>rosdoc2.yaml</rosdoc2>
  </export>

</package>
